--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,14 +2,21 @@
 <% @products.each_slice(3) do |three_products| %>
 <div class="row">
   <% three_products.each do |product| %>
-    <div class="col-md-4">
-      <div class="well">
-        <h2><a href="/products/<%= product.id %>"><%= product.name %></a></h2>
-        <h4>Price: <%= product.price %></h4>
-        <p><%= product.description %></p>
-        <img src="<%= product.image %>" alt="" style="width: 100%">
+  <div class="col-md-4">
+    <div class="panel panel-default panel-card">
+      <div class="panel-heading">
+        <img src="<%= product.image %>" />
+        <button class="btn btn-primary btn-sm" role="button">Follow</button>
       </div>
-    </div>
+      <div class="panel-figure">
+        <img class="img-responsive img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/73.jpg" />
+      </div>
+      <div class="panel-body text-center">
+        <h4 class="panel-header"><a href="/products/<%= product.id %>"><%= product.name %></a></h4>
+        <small><%= product.description %></small>
+      </div>
+    </div>  
+  </div>
   <% end %>
 </div>
 <% end %>
