--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,56 @@
-<h2><a href="/products/<%= @product.id %>"><%= @product.name %></a></h2>
-<h4>Price: <%= @product.price %></h4>
-<p><%= @product.description %></p>
-<img src="<%= @product.image %>" alt="">
-<div>
-  <a href="/products">Back to all products</a>
+<div class="card">
+  <div class="container-fliud">
+    <div class="wrapper row">
+      <div class="preview col-md-6">
+        
+        <div class="preview-pic tab-content">
+          <div class="tab-pane active" id="pic-1"><img src="<%= @product.image %>" /></div>
+          <div class="tab-pane" id="pic-2"><img src="<%= @product.image %>" /></div>
+          <div class="tab-pane" id="pic-3"><img src="<%= @product.image %>" /></div>
+          <div class="tab-pane" id="pic-4"><img src="<%= @product.image %>" /></div>
+          <div class="tab-pane" id="pic-5"><img src="<%= @product.image %>" /></div>
+        </div>
+        <ul class="preview-thumbnail nav nav-tabs">
+          <li class="active"><a data-target="#pic-1" data-toggle="tab"><img src="<%= @product.image %>" /></a></li>
+          <li><a data-target="#pic-2" data-toggle="tab"><img src="<%= @product.image %>" /></a></li>
+          <li><a data-target="#pic-3" data-toggle="tab"><img src="<%= @product.image %>" /></a></li>
+          <li><a data-target="#pic-4" data-toggle="tab"><img src="<%= @product.image %>" /></a></li>
+          <li><a data-target="#pic-5" data-toggle="tab"><img src="<%= @product.image %>" /></a></li>
+        </ul>
+        
+      </div>
+      <div class="details col-md-6">
+        <h3 class="product-title"><%= @product.name %></h3>
+        <div class="rating">
+          <div class="stars">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star-empty"></span>
+            <span class="glyphicon glyphicon-star-empty"></span>
+          </div>
+          <span class="review-no">41 reviews</span>
+        </div>
+        <p class="product-description"><%= @product.description %></p>
+        <h4 class="price">current price: <span>$<%= @product.price %></span></h4>
+        <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p>
+        <h5 class="sizes">sizes:
+          <span class="size" data-toggle="tooltip" title="small">s</span>
+          <span class="size" data-toggle="tooltip" title="medium">m</span>
+          <span class="size" data-toggle="tooltip" title="large">l</span>
+          <span class="size" data-toggle="tooltip" title="xtra large">xl</span>
+        </h5>
+        <h5 class="colors">colors:
+          <span class="color orange not-available" data-toggle="tooltip" title="Not In store"></span>
+          <span class="color green"></span>
+          <span class="color blue"></span>
+        </h5>
+        <div class="action">
+          <button class="add-to-cart btn btn-default" type="button">add to cart</button>
+          <button class="like btn btn-default" type="button"><span class="glyphicon glyphicon-heart"></span></button>
+          <a class="btn btn-default" href="/products">Back to all products</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
